# BuildingFusion

./: .gitignore  Dockerfile  README.md  build.sh  calib  calib.txt  docker_dev.sh  docker_run.sh  run.sh  settings.yaml
src/collaborative_fusion/: CMakeLists.txt  CMakeLists_new.txt  FindEigen3.cmake  FindNicp.cmake
src/collaborative_fusion/debian/: changelog  control  rules
src/collaborative_fusion/msg/: Frame.msg  FrameDescriptor.msg  FrameKeyPoints.msg  FrameLocalPoints.msg  FramePose.msg  KeyPoint.msg  PointCloud.msg  RoomInfo.msg  RoomModel.msg  UpdateFrame.msg
src/collaborative_fusion/obj-x86_64-linux-gnu/: CMakeCache.txt  Makefile  cmake_install.cmake
src/collaborative_fusion/obj-x86_64-linux-gnu/atomic_configure/: .rosinstall
src/collaborative_fusion/obj-x86_64-linux-gnu/catkin_generated/: collaborative_fusion-msg-extras.cmake.develspace.in  collaborative_fusion-msg-extras.cmake.installspace.in  generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
src/collaborative_fusion/obj-x86_64-linux-gnu/catkin_generated/installspace/: collaborative_fusion-msg-paths.cmake  collaborative_fusion.pc  collaborative_fusionConfig.cmake  local_setup.sh  setup.sh
src/collaborative_fusion/obj-x86_64-linux-gnu/cmake/: collaborative_fusion-genmsg-context.py  collaborative_fusion-genmsg.cmake
src/collaborative_fusion/obj-x86_64-linux-gnu/devel/: .catkin  local_setup.sh  setup.sh
src/collaborative_fusion/obj-x86_64-linux-gnu/gtest/: Makefile  cmake_install.cmake
src/collaborative_fusion/obj-x86_64-linux-gnu/gtest/gtest/: Makefile  cmake_install.cmake
src/collaborative_fusion/obj-x86_64-linux-gnu/src/scn_cpp/: Makefile  cmake_install.cmake
src/collaborative_fusion/src/: BasicAPI.cpp  BasicAPI.h  CTestTestfile.cmake  CommunicationAPI.cpp  CommunicationAPI.h  FindChisel.cmake  GCFusion.files  README.md  build.sh  final_processing.cpp  flatten_floor_test.cpp  header.h  icp_test.cpp  main.cpp  offline_optimization.cpp  offline_reconstruction.cpp  offline_reconstruction.h  optimization_comparison.cpp  report.md  room_lcd.cpp  server_mild.cpp  server_termination.cpp
src/collaborative_fusion/src/ARDemo/: SocketServer.cpp  SocketServer.h  server.cpp
src/collaborative_fusion/src/CHISEL/src/: CMakeLists.txt  CudaComputeTargetFlags.cmake
src/collaborative_fusion/src/GCFusion/: MapMaintain.hpp  MobileFusion.cpp  MobileFusion.h  MobileGUI.hpp  RoomOptimization.cpp  RoomOptimization.h
src/collaborative_fusion/src/GCSLAM/: DenseOdometry.cpp  DenseOdometry.h  GCSLAM.cpp  GCSLAM.h  GlobalParameter.h  ICPRegistration.cpp  ICPRegistration.h  MultiViewGeometry.cpp  MultiViewGeometry.h  OdometryPredefined.h  PinholeCamera.h  frame.h
src/collaborative_fusion/src/GCSLAM/MILD/: BayesianFilter.hpp  loop_closure_detector.hpp  sparse_match.hpp
src/collaborative_fusion/src/GCSLAM/ORBSLAM/: ORBextractor.cpp
src/collaborative_fusion/src/Geometry/: Geometry.cpp  Geometry.h
src/collaborative_fusion/src/IO/: RPLYReader.cpp  RPLYReader.h
src/collaborative_fusion/src/Parameters/: canshu.yaml  execu.sh  settings.yaml
src/collaborative_fusion/src/RoomDetection/: Arrangements.cpp  Arrangements.h  Building.h  Clustering.cpp  Clustering.h  DCEL.cpp  DCEL.h  DrawImage.cpp  DrawImage.h  PatchDetection.cpp  PatchDetection.h
src/collaborative_fusion/src/RoomLCD/: GRANSAC.hpp  PlaneFittingModel.hpp  TransformationModel.hpp  debugtools.h  example-app.cpp  utils.cpp  utils.h
src/collaborative_fusion/src/RoomLCD/graphmatching/: ComputeFeatures.cpp  GraphMatching.cpp  graphmatching.h
src/collaborative_fusion/src/Shaders/: Parse.cpp
src/collaborative_fusion/src/Tools/: ImageProcessing.cpp  ImageProcessing.h  LiveLogReader.cpp  LiveLogReader.h  OpenNI2Interface.cpp  OpenNI2Interface.h  RawLogReader.cpp  RealSenseInterface.cpp.useless  TickTock.h
src/collaborative_fusion/src/_Useless/: Parse.cpp  Parse.h  draw_feedback_VoxelHashing.vert
src/collaborative_fusion/src/catkin_generated/: generate_cached_setup.py  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
src/collaborative_fusion/src/catkin_generated/installspace/: collaborative_fusion-msg-extras.cmake  collaborative_fusion.pc  collaborative_fusionConfig.cmake
src/collaborative_fusion/src/cmake/: collaborative_fusion-genmsg-context.py  collaborative_fusion-genmsg.cmake
src/collaborative_fusion/src/devel/: .catkin  .rosinstall  setup.sh
src/collaborative_fusion/src/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/collaborative_fusion/src/gtest/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/collaborative_fusion/src/scn_cpp/: CMakeLists.txt
src/collaborative_fusion/src/scn_cpp/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/collaborative_fusion/src/scn_cpp/sparseconvnet/: CMakeLists.txt
src/collaborative_fusion/src/scn_cpp/src/: model.cpp  model.h  utils.cpp  utils.h
src/collaborative_fusion/src/scn_cpp/tools/: split.py
src/collaborative_fusion/src/scn_cpp/weight/: unet_0.npy  unet_1.npy  unet_10.npy  unet_100.npy  unet_101.npy  unet_102.npy  unet_103.npy  unet_104.npy  unet_105.npy  unet_106.npy  unet_107.npy  unet_108.npy  unet_109.npy  unet_11.npy  unet_110.npy  unet_111.npy  unet_112.npy  unet_113.npy  unet_114.npy  unet_115.npy  unet_116.npy  unet_117.npy  unet_118.npy  unet_119.npy  unet_12.npy  unet_120.npy  unet_121.npy  unet_122.npy  unet_123.npy  unet_124.npy  unet_125.npy  unet_126.npy  unet_127.npy  unet_128.npy  unet_129.npy  unet_13.npy  unet_130.npy  unet_131.npy  unet_132.npy  unet_133.npy  (+121 more)
src/collaborative_fusion/src/server/: CameraNode.h  CompressedPointCloud.h  Correspondence.h  FinalIntegrator.h  NormalCorrespondence.h  RoomColorTable.h  RoomHandler.h  ServerFrame.h  ServerGui.h  ServerMild.cpp  ServerMild.h  ServerOptimizer.cpp  ServerOptimizer.h  ServerSLAM.cpp  ServerSLAM.h
src/collaborative_fusion/srv/: GlobalOptimization.srv  LoopClosureDetection.srv  MeshVisualization.srv  OpenGui.srv  Registration.srv  RoomRegistration.srv  Termination.srv  WithDraw.srv
(+63 files in other folders)
